# comp90025_project1

./: CMakeLists.txt  README.md  chaowei_project1.slurm
src/: CMakeLists.txt  kseqalign.cpp
